--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@tailwindcss/postcss": "^4.0.6",
+    "date-fns": "^4.1.0",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "ngx-extended-pdf-viewer": "^23.0.0-alpha.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -33,6 +35,7 @@
     "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jspdf": "^2.0.0",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
