--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-angular": "^0.483.0",
     "ngx-extended-pdf-viewer": "^23.0.0-alpha.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
