--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/postcss": "^4.0.6",
     "date-fns": "^4.1.0",
-    "jspdf": "^3.0.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-angular": "^0.483.0",
     "ngx-extended-pdf-viewer": "^23.0.0-alpha.4",
     "rxjs": "~7.8.0",
+    "signature_pad": "^5.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -36,8 +39,10 @@
     "@angular-devkit/build-angular": "^19.1.6",
     "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^19.1.0",
+    "@types/html2canvas": "^1.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/jspdf": "^2.0.0",
+    "@types/signature_pad": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
