--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-angular": "^0.483.0",
+    "ngx-cookie-service": "^19.1.2",
     "ngx-extended-pdf-viewer": "^23.0.0-alpha.4",
     "rxjs": "~7.8.0",
     "signature_pad": "^5.0.7",
